company-project/prome-graf-thanos/granfana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: cattle-monitoring-system
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.homelabs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher-monitoring-grafana
            port:
              number: 80
